# posai-StringUtils

./: CMakeLists.txt  README.md  main.cpp
inc/: conversions.h  internal_defs.h  lex.h  make_string.h  metrics.h  padding.h  query.h  set_locale.h  stringutils.h  substring.h  textedit.h  transformations.h  version.h
src/: conversions.cpp  metrics.cpp  padding.cpp  query.cpp  set_locale.cpp  substring.cpp  textedit.cpp  transformations.cpp
stringutils/: casemods.cpp  casemods.h  conversions.cpp  conversions.h  make_string.h  metrics.cpp  metrics.h  reverse.cpp  reverse.h  set_locale.cpp  set_locale.h  special_cases.cpp  special_cases.h  stringutils.h  substring.cpp  substring.h  transformations.cpp  transformations.h
test/: test.cpp
